chore: updated labels

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1644,7 +1644,7 @@ angal.anamnesis.alvo.other.txt                                                  
 angal.anamnesis.cancel.txt               	                                                           = Cancel
 angal.anamnesis.closed.cardiovascolaris.txt                                                            = Cardiovascolaris
 angal.anamnesis.closed.diseases.txt                                                                    = Diseases
-angal.anamnesis.closed.drugsaddiction.txt                                                              = DrugsAddiction
+angal.anamnesis.closed.drugsaddiction.txt                                                              = Drug Addiction
 angal.anamnesis.closed.endocrinometabol.txt                                                            = Endocrine / Metabolic
 angal.anamnesis.closed.gyno.txt                                                                        = Gyno/Obstetrical
 angal.anamnesis.closed.hypertension.txt                                                                = Hypertension
@@ -1653,7 +1653,7 @@ angal.anamnesis.closed.neoplastic.txt                                           
 angal.anamnesis.closed.nothingtodeclare.txt                                                            = Nothing to declare
 angal.anamnesis.closed.orto.txt                                                                        = Ortoreumatologic
 angal.anamnesis.closed.other.txt                                                                       = Other
-angal.anamnesis.closed.pastproblems.border                                                             = Past problems (Closed)
+angal.anamnesis.closed.pastproblems.border                                                             = Past Problems (Closed)
 angal.anamnesis.closed.remarks.border                                                                  = Remarks (Closed)
 angal.anamnesis.closed.respiratory.txt                                                                 = Respiratory
 angal.anamnesis.closed.excludenothingtodeclare.tooltip                                                 = Exclude 'Nothing to declare'
@@ -1668,14 +1668,14 @@ angal.anamnesis.drugs.txt                                                       
 angal.anamnesis.drugs.no.txt                                                                           = No
 angal.anamnesis.drugs.yes.txt                                                                          = Yes
 angal.anamnesis.examination.txt                                                                        = Examination
-angal.anamnesis.extra.allergy.border                                                                   = Allergy
+angal.anamnesis.extra.allergy.border                                                                   = Allergies
 angal.anamnesis.extra.medicine.border                                                                  = Usual Medications
 angal.anamnesis.extra.remarks.border                                                                   = Remarks (Extra)
-angal.anamnesis.extra.surgery.border                                                                   = Surgery
-angal.anamnesis.extra.therapy.border                                                                   = Therapy
+angal.anamnesis.extra.surgery.border                                                                   = Surgeries
+angal.anamnesis.extra.therapy.border                                                                   = Therapies
 angal.anamnesis.family.cardiovascolaris.txt                                                            = Cardiovascolaris
 angal.anamnesis.family.diseases.txt                                                                    = Diseases
-angal.anamnesis.family.drugsaddiction.txt                                                              = DrugsAddiction
+angal.anamnesis.family.drugsaddiction.txt                                                              = Drug Addiction
 angal.anamnesis.family.endocrinometabol.txt                                                            = Endocrine / Metabolic
 angal.anamnesis.family.familyhistory.border                                                            = Family History
 angal.anamnesis.family.gyno.txt                                                                        = Gyno/Obstetrical
@@ -1704,10 +1704,10 @@ angal.anamnesis.period.normal.txt                                               
 angal.anamnesis.period.other.txt                                                                       = Other
 angal.anamnesis.physiologicalhistory.border                                                            = Physiological History
 angal.anamnesis.pregnancies.txt                                                                        = Pregnancies
-angal.anamnesis.pregnancies.abort.txt                                                                  = Abort Nr
-angal.anamnesis.pregnancies.delivery.txt                                                               = Delivery Nr
+angal.anamnesis.pregnancies.abort.txt                                                                  = Abort Number
+angal.anamnesis.pregnancies.delivery.txt                                                               = Delivery Number
 angal.anamnesis.pregnancies.no.txt                                                                     = No
-angal.anamnesis.pregnancies.nr.txt                                                                     = Nr
+angal.anamnesis.pregnancies.nr.txt                                                                     = Number
 angal.anamnesis.pregnancies.yes.txt                                                                    = Yes
 angal.anamnesis.save.txt          		                                                               = Save
 angal.anamnesis.secondname.label                                                                       = Second Name:
@@ -1722,7 +1722,7 @@ angal.anamnesis.open.anamnesis.btn                                              
 angal.anamnesis.title.txt                                                                              = Anamnesis
 angal.anamnesis.open.cardiovascolaris.txt                                                              = Cardiovascolaris
 angal.anamnesis.open.diseases.txt                                                                      = Diseases
-angal.anamnesis.open.drugsaddiction.txt                                                                = DrugsAddiction
+angal.anamnesis.open.drugsaddiction.txt                                                                = Drug Addiction
 angal.anamnesis.open.endocrinometabol.txt                                                              = Endocrine / Metabolic
 angal.anamnesis.open.gyno.txt                                                                          = Gyno/Obstetrical
 angal.anamnesis.open.hypertension.txt                                                                  = Hypertension
@@ -1731,7 +1731,7 @@ angal.anamnesis.open.neoplastic.txt                                             
 angal.anamnesis.open.nothingtodeclare.txt                                                              = Nothing to declare
 angal.anamnesis.open.orto.txt                                                                          = Ortoreumatologic
 angal.anamnesis.open.other.txt                                                                         = Other
-angal.anamnesis.open.recentproblems.border                                                             = Recent problems (Open)
+angal.anamnesis.open.recentproblems.border                                                             = Recent Problems (Open)
 angal.anamnesis.open.remarks.border                                                                    = Remarks (Open)
 angal.anamnesis.open.respiratory.txt                                                                   = Respiratory
 angal.anamnesis.open.tooltip.excludenothingtodeclare.txt                                               = Exclude 'Nothing to declare'
