chore: changed some labels

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1704,8 +1704,8 @@ angal.anamnesis.period.normal.txt                                               
 angal.anamnesis.period.other.txt                                                                       = Other
 angal.anamnesis.physiologicalhistory.border                                                            = Physiological History
 angal.anamnesis.pregnancies.txt                                                                        = Pregnancies
-angal.anamnesis.pregnancies.abort.txt                                                                  = Abort Number
-angal.anamnesis.pregnancies.delivery.txt                                                               = Delivery Number
+angal.anamnesis.pregnancies.abort.txt                                                                  = Aborted
+angal.anamnesis.pregnancies.delivery.txt                                                               = Delivered
 angal.anamnesis.pregnancies.no.txt                                                                     = No
 angal.anamnesis.pregnancies.nr.txt                                                                     = Number
 angal.anamnesis.pregnancies.yes.txt                                                                    = Yes
