fix: shortcut key for anamnesis

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -73,7 +73,7 @@ angal.admission.malnutritioncontrol.btn.key                                     
 angal.admission.maritalstatus.label                                                                    = Marital Status
 angal.admission.merge                                                                                  = Merge
 angal.admission.merge.btn                                                                              = Merge
-angal.admission.merge.btn.key                                                                          = M
+angal.admission.merge.btn.key                                                                          = G
 angal.admission.motherisalive                                                                          = Mother is alive
 angal.admission.motherisdead                                                                           = Mother is dead
 angal.admission.newadmission.title                                                                     = New Admission
@@ -1736,3 +1736,4 @@ angal.anamnesis.open.remarks.border                                             
 angal.anamnesis.open.respiratory.txt                                                                   = Respiratory
 angal.anamnesis.open.tooltip.excludenothingtodeclare.txt                                               = Exclude 'Nothing to declare'
 angal.anamnesis.open.tooltip.resetrecentproblems.txt                                                   = Reset Recent problems                                                       = Anamnesis
+angal.opd.anamnesis.btn.key                                                                            = M
