chore: code review points

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1641,7 +1641,7 @@ angal.anamnesis.alcool.yes.txt                                                  
 angal.anamnesis.alvo.txt                                                                               = Alvo
 angal.anamnesis.alvo.normal.txt                                                                        = Normal
 angal.anamnesis.alvo.other.txt                                                                         = Other
-angal.anamnesis.cancel.txt               	                                                           = Cancel
+angal.anamnesis.cancel.txt                                                                             = Cancel
 angal.anamnesis.closed.cardiovascolaris.txt                                                            = Cardiovascolaris
 angal.anamnesis.closed.diseases.txt                                                                    = Diseases
 angal.anamnesis.closed.drugsaddiction.txt                                                              = Drug Addiction
@@ -1735,5 +1735,5 @@ angal.anamnesis.open.recentproblems.border                                      
 angal.anamnesis.open.remarks.border                                                                    = Remarks (Open)
 angal.anamnesis.open.respiratory.txt                                                                   = Respiratory
 angal.anamnesis.open.tooltip.excludenothingtodeclare.txt                                               = Exclude 'Nothing to declare'
-angal.anamnesis.open.tooltip.resetrecentproblems.txt                                                   = Reset Recent problems                                                       = Anamnesis
+angal.anamnesis.open.tooltip.resetrecentproblems.txt                                                   = Reset recent problems
 angal.opd.anamnesis.btn.key                                                                            = M
