Change "Pick" to "Select"

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -311,7 +311,7 @@ angal.billbrowser.patientstatement.txt                                          
 angal.billbrowser.pending.title                                                                        = Pending
 angal.billbrowser.period.txt                                                                           = Period
 angal.billbrowser.periodcolon.txt                                                                      = Period:
-angal.billbrowser.pickmonth.txt                                                                        = Pick Month...
+angal.billbrowser.selectmonth.txt                                                                      = Select Month...
 angal.billbrowser.pleaseselectabill.msg                                                                = Please select a bill.
 angal.billbrowser.pleaseselectareport.msg                                                              = Please select a report.
 angal.billbrowser.pleaseselectonlyonebill.msg                                                          = Please select only one bill.
@@ -931,9 +931,9 @@ angal.medicalstockwardedit.internaluse                                          
 angal.medicalstockwardedit.medical.btn                                                                 = Medical
 angal.medicalstockwardedit.medical.btn.key                                                             = M
 angal.medicalstockwardedit.patient                                                                     = Patient
-angal.medicalstockwardedit.pickpatient                                                                 = Pick Patient
-angal.medicalstockwardedit.pickpatient.btn                                                             = Pick Patient
-angal.medicalstockwardedit.pickpatient.btn.key                                                         = P
+angal.medicalstockwardedit.selectpatient                                                               = Select Patient
+angal.medicalstockwardedit.selectpatient.btn                                                           = Select Patient
+angal.medicalstockwardedit.selectpatient.btn.key                                                       = P
 angal.medicalstockwardedit.pieces                                                                      = pieces
 angal.medicalstockwardedit.pleaseinsertadescriptionfortheinternaluse.msg                               = Please insert a description for internal use.
 angal.medicalstockwardedit.pleaseselectadrug.msg                                                       = Please select a drug.
