--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -532,9 +532,9 @@ angal.groupsbrowser.theadmingroupcannotbedeleted.msg                            
 angal.groupsbrowser.thegroupalreadyexists.fmt.msg                                                      = The group "{0}" already exists.
 angal.groupsbrowser.thisgrouphasusersandcannotbedeleted.msg                                            = This group has users and cannot be deleted.
 angal.groupsbrowser.title                                                                              = Groups Browser
-angal.help.pdfviewernotfound.msg                                                                           = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
+angal.help.pdfviewernotfound.msg                                                                       = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
 angal.help.pdfviewernotfoundoruserguidenotfound.msg                                                    = The PDF Viewer is not found or the User Guide is not found in the Documents folder.\nDo you want to view the version on the Open Hospital website?
-angal.help.userguidenotfound.msg                                                                       = The User Guide is not found in the Documents folder.\nDo you want to view the version on the Open Hospital website?
+angal.help.userguidenotfound.msg                                                                       = The User Guide is not found in the Documents folder.\nDo you want to view an online version?
 angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
 angal.hospital                                                                                         = Open Hospital
 angal.hospital.currencycod                                                                             = Currency Code
