Add new filters and improved layout (WIP)

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -311,7 +311,6 @@ angal.billbrowser.patientstatement.txt                                          
 angal.billbrowser.pending.title                                                                        = Pending
 angal.billbrowser.period.txt                                                                           = Period
 angal.billbrowser.periodcolon.txt                                                                      = Period:
-angal.billbrowser.selectmonth.txt                                                                      = Select Month...
 angal.billbrowser.pleaseselectabill.msg                                                                = Please select a bill.
 angal.billbrowser.pleaseselectareport.msg                                                              = Please select a report.
 angal.billbrowser.pleaseselectonlyonebill.msg                                                          = Please select only one bill.
@@ -322,6 +321,7 @@ angal.billbrowser.report                                                        
 angal.billbrowser.report.btn                                                                           = Report
 angal.billbrowser.report.btn.key                                                                       = R
 angal.billbrowser.selectapatient.tooltip                                                               = Select a patient.
+angal.billbrowser.selectmonth.txt                                                                      = Select Month...
 angal.billbrowser.shortreportonlybaddebt.txt                                                           = Short Report (only BadDebt bills)
 angal.billbrowser.thebilldeleted.msg                                                                   = The bill is deleted.
 angal.billbrowser.thebillisstillopen.msg                                                               = This bill is still open.
@@ -341,6 +341,7 @@ angal.common.agefrom.label                                                      
 angal.common.ageto.label                                                                               = Age To:
 angal.common.all.btn                                                                                   = All
 angal.common.all.txt                                                                                   = All
+angal.common.alldiseasetypes.txt                                                                       = All Disease Types
 angal.common.alltypes.txt                                                                              = All Types
 angal.common.amount.txt                                                                                = Amount
 angal.common.arterialpressureabbr.txt                                                                  = AP
@@ -472,9 +473,8 @@ angal.dicom.delete.no                                                           
 angal.dicom.delete.request                                                                             = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                                               = Confirm Deletion
 angal.dicom.delete.yes                                                                                 = Yes
-angal.dicom.dicomformatnotsupported.fmt.msg                                                            = DICOM format not supported: {0}
-angal.dicom.err                                                                                        = Error
 angal.dicom.dicomformatnotsupported.fmt.msg                                                            = Image format not supported: {0} 
+angal.dicom.err                                                                                        = Error
 angal.dicom.image.frames                                                                               = Frames
 angal.dicom.image.patient.dicom                                                                        = Imaging Patient
 angal.dicom.image.patient.oh                                                                           = Patient
@@ -932,9 +932,6 @@ angal.medicalstockwardedit.internaluse                                          
 angal.medicalstockwardedit.medical.btn                                                                 = Medical
 angal.medicalstockwardedit.medical.btn.key                                                             = M
 angal.medicalstockwardedit.patient                                                                     = Patient
-angal.medicalstockwardedit.selectpatient                                                               = Select Patient
-angal.medicalstockwardedit.selectpatient.btn                                                           = Select Patient
-angal.medicalstockwardedit.selectpatient.btn.key                                                       = P
 angal.medicalstockwardedit.pieces                                                                      = pieces
 angal.medicalstockwardedit.pleaseinsertadescriptionfortheinternaluse.msg                               = Please insert a description for internal use.
 angal.medicalstockwardedit.pleaseselectadrug.msg                                                       = Please select a drug.
@@ -944,6 +941,9 @@ angal.medicalstockwardedit.removeitem.btn                                       
 angal.medicalstockwardedit.removeitem.btn.key                                                          = I
 angal.medicalstockwardedit.selectadrug                                                                 = Select a drug
 angal.medicalstockwardedit.selectapatient                                                              = Select a patient
+angal.medicalstockwardedit.selectpatient                                                               = Select Patient
+angal.medicalstockwardedit.selectpatient.btn                                                           = Select Patient
+angal.medicalstockwardedit.selectpatient.btn.key                                                       = P
 angal.medicalstockwardedit.title                                                                       = New / Edit
 angal.medicalstockwardedit.tooltip.associateapatientwiththismovement                                   = Associate a Patient with this movement
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement                            = Remove Patient association with this movement
@@ -1192,6 +1192,7 @@ angal.opd.fullname.col                                                          
 angal.opd.insertavalidage.msg                                                                          = Insert a valid age.
 angal.opd.lastopdnote.txt                                                                              = Note
 angal.opd.lastopdvisitm.txt                                                                            = LAST OPD VISIT
+angal.opd.mypatient.btn                                                                                = My patients
 angal.opd.new.btn                                                                                      = New
 angal.opd.newattendance.txt                                                                            = New Attendance
 angal.opd.newopdregistration.title                                                                     = New OPD Registration
@@ -1207,9 +1208,11 @@ angal.opd.opdnumberalreadyexist.msg                                             
 angal.opd.opdnumbermustbeanumber.msg                                                                   = OPD No. must be a number.
 angal.opd.opdoutpatientdepartment.title                                                                = OPD Out Patient Department
 angal.opd.operation                                                                                    = Operation
+angal.opd.otherfilters.border                                                                          = Other filters
 angal.opd.patientcode.fmt.msg                                                                          = Patient (code: {0})
 angal.opd.patientid.col                                                                                = PAT. ID
 angal.opd.patientstatus.col                                                                            = Status
+angal.opd.patienttype.label                                                                            = Patient Type:
 angal.opd.pleasechooseavalidtimeforthenextvisit.msg                                                    = Please choose a valid time for the next visit.
 angal.opd.pleasechooseawardforthenextvisit.msg                                                         = Please choose a ward for the next visit.
 angal.opd.pleaseinsertattendancedate.msg                                                               = Please insert an attendance date.
@@ -1221,8 +1224,8 @@ angal.opd.reattendance.btn                                                      
 angal.opd.reattendance.txt                                                                             = Re-Attendance
 angal.opd.referral.txt                                                                                 = Referral
 angal.opd.referralto.txt                                                                               = Referred To
+angal.opd.searchbycodes.border                                                                         = Search by codes
 angal.opd.secondname.txt                                                                               = Last Name
-angal.opd.selectadisease.txt                                                                           = Select a Disease
 angal.opd.selectapatient.txt                                                                           = Select a Patient
 angal.opd.selectaward.txt                                                                              = Select a Ward
 angal.opd.specifiedwardisnotenabledforopdservice.msg                                                   = Specified ward is not enabled for OPD service.
