--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -397,6 +397,7 @@ angal.common.new.btn                                                            
 angal.common.new.btn.key                                                                               = N
 angal.common.newpatient.btn                                                                            = New Patient
 angal.common.newpatient.btn.key                                                                        = N
+angal.common.nodatatoshow.msg                                                                          = No data to show.
 angal.common.notapplicable.txt                                                                         = N/A
 angal.common.notdefined.txt                                                                            = N/D
 angal.common.note.title                                                                                = Note
@@ -408,6 +409,7 @@ angal.common.patient.txt                                                        
 angal.common.patientID                                                                                 = Pat. ID
 angal.common.pleaseinsertacode.msg                                                                     = Please insert a code.
 angal.common.pleaseinsertavaliddescription.msg                                                         = Please insert a valid description.
+angal.common.pleaseinsertavalidnumber.msg                                                              = Please insert a valid number.
 angal.common.pleaseselectapatient.msg                                                                  = Please select a patient.
 angal.common.pleaseselectarow.msg                                                                      = Please select a row.
 angal.common.pleaseselectaward.msg                                                                     = Please select a ward.
