--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1226,7 +1226,8 @@ angal.opd.reattendance.btn                                                      
 angal.opd.reattendance.txt                                                                             = Re-Attendance
 angal.opd.referral.txt                                                                                 = Referral
 angal.opd.referralto.txt                                                                               = Referred To
-angal.opd.searchbycodes.border                                                                         = Search by codes
+angal.opd.searchbycodespressenter.border                                                               = Search by codes (press ENTER)
+angal.opd.searchdisease.label                                                                          = Search Disease:
 angal.opd.secondname.txt                                                                               = Last Name
 angal.opd.selectapatient.txt                                                                           = Select a Patient
 angal.opd.selectaward.txt                                                                              = Select a Ward
