Add USER column and made its filter available for SINGLEUSER=no

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -463,6 +463,7 @@ angal.common.uom.mmHg                                                           
 angal.common.uom.percentage                                                                            = %
 angal.common.update.btn                                                                                = Update
 angal.common.update.btn.key                                                                            = U
+angal.common.user.col                                                                                  = User
 angal.common.userid                                                                                    = User
 angal.common.userid.label                                                                              = User:
 angal.common.ward.txt                                                                                  = Ward
