Apply suggestions from code review
Co-authored-by: David B Malkovsky <david@malkovsky.org>

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1195,7 +1195,7 @@ angal.opd.fullname.col                                                          
 angal.opd.insertavalidage.msg                                                                          = Insert a valid age.
 angal.opd.lastopdnote.txt                                                                              = Note
 angal.opd.lastopdvisitm.txt                                                                            = LAST OPD VISIT
-angal.opd.mypatient.btn                                                                                = My patients
+angal.opd.mypatient.btn                                                                                = My Patients
 angal.opd.new.btn                                                                                      = New
 angal.opd.newattendance.txt                                                                            = New Attendance
 angal.opd.newopdregistration.title                                                                     = New OPD Registration
@@ -1211,7 +1211,7 @@ angal.opd.opdnumberalreadyexist.msg                                             
 angal.opd.opdnumbermustbeanumber.msg                                                                   = OPD No. must be a number.
 angal.opd.opdoutpatientdepartment.title                                                                = OPD Out Patient Department
 angal.opd.operation                                                                                    = Operation
-angal.opd.otherfilters.border                                                                          = Other filters
+angal.opd.otherfilters.border                                                                          = Other Filters
 angal.opd.patientcode.fmt.msg                                                                          = Patient (code: {0})
 angal.opd.patientid.col                                                                                = PAT. ID
 angal.opd.patientstatus.col                                                                            = Status
