--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1227,7 +1227,7 @@ angal.opd.reattendance.btn                                                      
 angal.opd.reattendance.txt                                                                             = Re-Attendance
 angal.opd.referral.txt                                                                                 = Referral
 angal.opd.referralto.txt                                                                               = Referred To
-angal.opd.searchbycodespressenter.border                                                               = Search by codes (press ENTER)
+angal.opd.searchbycodespressenter.border                                                               = Search by Code (press ENTER)
 angal.opd.searchdisease.label                                                                          = Search Disease:
 angal.opd.secondname.txt                                                                               = Last Name
 angal.opd.selectapatient.txt                                                                           = Select a Patient
