Fix Reset bundle and rollback latest suggested changes

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1227,6 +1227,8 @@ angal.opd.reattendance.btn                                                      
 angal.opd.reattendance.txt                                                                             = Re-Attendance
 angal.opd.referral.txt                                                                                 = Referral
 angal.opd.referralto.txt                                                                               = Referred To
+angal.opd.reset.btn                                                                                    = Reset
+angal.opd.reset.btn.key                                                                                = R
 angal.opd.searchbycodespressenter.border                                                               = Search by Code (press ENTER)
 angal.opd.searchdisease.label                                                                          = Search Disease:
 angal.opd.secondname.txt                                                                               = Last Name
