OP-990 Bill update validation

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1149,6 +1149,7 @@ angal.newbill.selectamedical.txt                                                
 angal.newbill.selectanexam.txt                                                                         = Select an exam:
 angal.newbill.selectanoperation.txt                                                                    = Select an operation:
 angal.newbill.selectapricelist.title                                                                   = Select a PriceList
+angal.newbill.thecurrencyinthepricelisthaschangeditwasbutisnowdoyouwantthenewvalue.fmt.msg             = The currency in the price list has changed; it was '{0}' but is now '{1}'.\nDo you want to keep the new value?
 angal.newbill.thedateisbeforethelastpayment.msg                                                        = The date is before the last payment.
 angal.newbill.thepricelistassociatedwiththisbillnolongerexists.msg                                     = The pricelist associated with this bill no longer exists.
 angal.newbill.thisbillwaslinkedtoapreviousadmissiondoyouwanttolinkittothecurrentadmissioninstead.msg   = This bill was linked to a previous admission. Do you want to link it to the current admission instead?
